[package]
name = "basic-rocket"
version = "0.1.0"
authors = ["guilhermeSmartins <mineg4500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = ""
serde = ""
diesel = { version = "", features = ["postgres"] }

[dependencies.serde_derive]
version = ""

[dependencies.rocket_contrib]
version = ""
default-features = false
features = ["json", "diesel_postgres_pool"]